# whatsapp-langchain-full

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.db  Dockerfile.frontend  Dockerfile.tests  Dockerfile.worker  LICENSE  Makefile  ONBOARDING.md  README.md  docker-compose.dokploy.yml  docker-compose.langfuse.yml  docker-compose.yml  langgraph.json  pyproject.toml
db/: migrate.py
db/migrations/: 001_initial.sql  002_media_processing_audit.sql  003_auth_schema.sql  004_better_auth_tables.sql  005_rate_limit_buckets.sql  006_agent_llm_config.sql  007_empresa.sql  008_empresa_id_scope.sql  009_conexao.sql  010_cliente_atendimento.sql  011_modelo_mensagem.sql  012_hook.sql  013_empresa_calendar_config.sql  014_agente_ia_config.sql  015_base_conhecimento.sql  016_variavel_ambiente.sql  017_departamento_horario.sql  018_documento_chunk.sql  019_cliente_memoria.sql  020_evolution_provider.sql  022_rate_limit_generic.sql  023_hook_dead_letter.sql  024_user_status.sql  025_password_reset_pending.sql  026_login_event.sql  027_agendamento.sql  028_agendamento_regras.sql  029_aprovacao.sql  030_agendamento_historico.sql  031_rbac.sql  032_departamento_hierarquia.sql  033_pasta.sql  034_campanha.sql  035_atendimento_notify.sql  036_audit_log.sql  037_feature_flag.sql  038_cliente_enrich.sql  039_agente_ia.sql  040_menu_chatbot.sql  041_menu_chatbot_paridade_zigchat.sql  (+62 more)
docs/: ADDING_AGENTS.md  ARCHITECTURE.md  AUTH.md  DATABASE.md  DEPLOY.md  DOKPLOY.md  EVOLUTION.md  GETTING_STARTED.md  LANGFUSE.md  LANGSMITH.md  NPS.md  PROPOSTA_WORKFLOWS_LANGGRAPH.md  RAILWAY.md  RLS_OPERATIONS.md  STRESS_TESTING.md  TWILIO.md  WABA_SETUP.md  guia-debug-manual.md
docs/dev/: PATCH_PATTERN.md
docs/mackenzie/: 1_Menu_Principal.md  2_Menu_Atendimento_ao_Cliente.md  3_Menu_Agendamento.md  4_Menu_Exames.md  5_Menu_Tesouraria.md  6_Menu_Orcamentos.md  7_Menu_Portaria.md  8_Menu_Outras_Informacoes.md  9_Menu_Ouvidoria.md
docs/obsidian-vault/: 00-INDEX.md
docs/zigchat/: README.md  _schema_full.json  agente_ia.md  analytics.md  arquivo_pasta.md  atendimento_mensagem.md  autenticacao_rbac.md  aviso_termo.md  calendario.md  campanha_disparo.md  cliente_crm.md  conexao_canal.md  departamento_horario.md  empresa_billing.md  extras.md  formulario.md  hook_webhook.md  menu_chatbot.md  produto.md  variavel_ambiente.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/scripts/: seed-admin.ts
frontend/src/: proxy.ts
patch/: README.md
patch/Fase_2/: pyproject.toml
patch/Fase_3/: Dockerfile.worker
scripts/: backfill_rag_chunks.py  backfill_test_run_history.py  classify_hospitalar.py  classify_setorial.py  cluster_hospitalar.py  cluster_per_setor.py  eval_agentes_menu.py  eval_langsmith.py  extract_golden_from_dump.py  import_workflow_mackenzie.py  import_zigchat_dump.py  migrate_google_calendar_to_api_connection.py  migrate_radios_para_chat_nexus.sql  promote_golden_qa.py  seed_agentes_saude.py  seed_knowledge_base.sql  seed_prompts_agentes_existentes.py  seed_radios_setoriais.sql  setup_app_roles_passwords.py  sync_dataset_to_langsmith.py
src/whatsapp_langchain/: __init__.py
stress/: .env.example  Dockerfile  README.md  locustfile.py  requirements.txt
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_jornadas_setores.py
tests/eval/: test_eval_agentes_menu.py
tests/integration/: __init__.py  helpers.py  test_aba_endpoints.py  test_agente_endpoints.py  test_bootstrap_admin.py  test_catalogo_endpoints.py  test_cleanup_zumbis_endpoints.py  test_cliente_historico_endpoints.py  test_conexoes_endpoints.py  test_context_middleware.py  test_dashboard_atendimento_endpoints.py  (+17 more)
traefik/: langfuse.yml
webscap/: .gitignore  README.md  package-lock.json  package.json  scrap-zigchat.txt  tsconfig.json
(+642 files in other folders)
