[project]
name = "whatsapp-langchain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.2.15",
    "langgraph==1.1.10",
    "langchain-openai==1.1.7",
    "langgraph-checkpoint-postgres==3.0.4",
    "python-dotenv==1.2.1",
    "fastapi==0.129.0",
    "uvicorn[standard]==0.46.0",
    "psycopg[binary,pool]==3.3.2",
    "pydantic-settings==2.12.0",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "python-multipart==0.0.22",
    "twilio==9.10.2",
    "google-api-python-client==2.184.0",
    "google-auth==2.42.0",
    "google-auth-oauthlib==1.3.0",
    # M5.c.2 — extração de texto pra upload de PDF/DOCX
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    # M5.c.3 — OCR de PDFs escaneados + imagens (PNG/JPG)
    "pdf2image==1.17.0",
    "Pillow==11.0.0",
    # Fase 0 enterprise — observabilidade.
    # OTel sem version pin pra evitar conflito protobuf (resolver acha mais
    # nova compatível com langgraph/grpc deps); pinned no uv.lock após resolve.
    "prometheus-client>=0.21,<1.0",
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]==0.4.24",
    "langgraph-api==0.8.3",
    "langgraph-sdk==0.3.13",
    "ruff==0.9.6",
    "pyright==1.1.408",
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "docker_demo: testes demonstrativos que exigem API/Worker/DB rodando em Docker",
    "twilio_real: smoke tests que enviam mensagens reais via Twilio (requer TWILIO_LIVE_TESTS=1)",
]

[tool.coverage.run]
source = ["src/whatsapp_langchain"]
omit = [
    # Entry points cobertos por integration, não por unit
    "src/whatsapp_langchain/server/main.py",
    "src/whatsapp_langchain/worker/main.py",
    # Pool/migrations testados via integration
    "src/whatsapp_langchain/shared/db.py",
]

[tool.coverage.report]
# Política mínima Fase 0 — gate em 50%; sobe pra 60% até Fase 4 (vide
# memory feedback_testing_policy.md).
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
show_missing = true
skip_covered = false
